login with database

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>My Kanban Board</title>
-    <style>
-      /* Add styles to columns */
-      h2 {
-        display: inline-block;
-        background-color: lightgray;
-        padding: 10px;
-        border-radius: 10px;
-        width: 200px;
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      /* Add styles to list items */
-      li {
-        list-style-type: none;
-        background-color: white;
-        padding: 10px;
-        border-radius: 10px;
-        margin-bottom: 10px;
-        box-shadow: 2px 2px gray;
-        width: 200px;
-        margin-left: -40px;
-      }
-      /* Add styles to sections */
-      #to-do, #doing, #done {
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 20px;
-      }
-      /* Add styles to lists */
-      ul {
-        margin-top: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>My Kanban Board</h1>
-    <div id="to-do">
-      <h2>To Do</h2>
-      <ul id="to-do-list">
-        {% for task in tasks["to_do"] %}
-        <li>{{ task }}</li>
-        {% endfor %}
-      </ul>
-      <form method="POST" action="/add_task">
-        <input type="text" name="task" placeholder="Enter a new task">
-        <button type="submit">Add task</button>
-      </form>
-    </div>
-    <div id="doing">
-      <h2>Doing</h2>
-      <ul id="doing-list">
-        {% for task in tasks["doing"] %}
-        <li>{{ task }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    <div id="done">
-      <h2>Done</h2>
-      <ul id="done-list">
-        {% for task in tasks["done"] %}
-        <li>{{ task }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    <div id="move-task">
-      <h2>Move Task</h2>
-      <form method="POST" action="/move_task">
-        <label for="task">Task:</label>
-        <select name="task" id="task">
-          {% for task in tasks["to_do"] %}
-          <option value="{{ task }}">{{ task }}</option>
-          {% endfor %}
-          {% for task in tasks["doing"] %}
-          <option value="{{ task }}">{{ task }}</option>
-          {% endfor %}
-          {% for task in tasks["done"] %}
-          <option value="{{ task }}">{{ task }}</option>
-          {% endfor %}
-        </select>
-        <label for="column">Column:</label>
-        <select name='column' id="column">
-          <option value="to_do">To Do</option>
-          <option value="doing">Doing</option>
-          <option value="done">Done</option>
-        </select>
-        <button type="submit">Move task</button>
-      </form>
-      </div>
-      <div id="delete-task">
-        <h2>Delete Task</h2>
-        <form method="POST" action="/delete_task">
-          <label for="task">Task:</label>
-          <select name="task" id="task">
-            {% for task in tasks["to_do"] %}
-            <option value="{{ task }}">{{ task }}</option>
-            {% endfor %}
-            {% for task in tasks["doing"] %}
-            <option value="{{ task }}">{{ task }}</option>
-            {% endfor %}
-            {% for task in tasks["done"] %}
-            <option value="{{ task }}">{{ task }}</option>
-            {% endfor %}
-          </select>
-          <button type="submit">Delete task</button>
-        </form>
-        </div>
-  </body>
-</html>
+developing!
