--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -17,5 +17,6 @@
         <input type="password" id="password" name="password"><br>
         <input type="submit" value="Sign up">
     </form>
+    <p>Do you have an account? <a href="{{ url_for('login') }}">Log in!</a></p>
 </body>
 </html>
