--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -3,9 +3,9 @@
 {% block title %}Kanban Board{% endblock %}
 
 {% block header %}
-    <!-- Display the authenticated user's name-->
+    <!-- username's board -->
     {% if current_user.is_authenticated %}
-    <!-- Show logout button-->
+    <!-- logout button -->
     <form class="header__logout" method="POST" action="/logout">
         <input class="button button-submit" type="submit" value="Logout">
     </form>
@@ -19,41 +19,40 @@
     <h2>Task description Below:</h2>
     <!-- Add new task to the board-->
     <form class="add-todo__form" method="POST" action="/kanban">
-        <!-- Add required attrciube to prohibit empty submissions -->
+        <!-- not allowing empty submissions -->
         <input class="add-todo__form--title" type="text" name="description" required>
-        <!-- Add status selction option-->
+        <!-- Select status -->
         <select class="add-todo__form--status" name="status"> 
             <option selected value="todo">To do</option>
             <option value="progress">In progress</option>
             <option value="done">Completed</option>
         </select>
-        <!-- Add submit button to add the new task-->
+        <!-- submit button -->
         <input class="button button--wide" type="submit" value="Add">
     </form>
-    <!-- Add error message-->
+    <!-- error message-->
     {% if error %}
         <p class="error"><strong>Error:</strong>{{ error }}</p>
         {% endif %}
 </div>
 
-<!-- Add the Kanban Board sections: TODO, In Progress and Completed-->
+<!-- sections: 1. To do, 2. In Progress 3. Completed-->
 <section>
     <div class="kanban">
-        <!-- Container for TODO section-->
+        <!--To do section-->
         <div class="kanban__wrapper kanban__wrapper--todo">
             <h2>To do</h2>
 
-            <!-- Move TODO to In Progress section-->
+            <!-- upgrading from To do to In Progress-->
             <table>
                 {% for task in todo %}
                 <tr>
                     <td>
-                        <!-- Enabling the tasks to be sortable: drag from one section to another -->
-                        <ul class="kanban__sortable">
-                            <li class="kanban__card" width="35">{{ task.description }}</li>
+                        <ul>
+                            <li class="kanban__card" >{{ task.description }}</li>
                         </ul>
                     </td>
-                    <!-- Form to update the status of a to-do task to In Progress-->
+                    <!-- form to update the status of the task-->
                     <td>
                         <form class="update-status" method="POST" action="./update">
                             <input type="hidden" value="{{ task.description }}" name="name">
@@ -61,7 +60,7 @@
                             <input type="submit" value="&#128073">
                         </form>
                     </td>
-                    <!--Delete a task-->
+                    <!--Removing the task-->
                     <td>
                         <form class="update-status" method="POST" action="./delete">
                             <input type="hidden" value="{{ task.description }}" name="description">
@@ -71,23 +70,21 @@
                 </tr>
                 {% endfor %}
             </table>
-            <!--End TODO section-->
         </div>
 
-        <!-- Container for In Progress section-->
+        <!-- In Progress section-->
         <div class="kanban__wrapper kanban__wrapper--progress">
             <h2>In Progress</h2>
             <table>
                 {% for task in progress %}
                 <tr>
                     <td>
-                        <!-- Enabling the tasks to be sortable: drag from one section to another -->
-                        <ul class="kanban__sortable">
+                        <ul>
                             <li class="kanban__card" width=35> {{ task.description }}</li>
                         </ul>
                     </td>
 
-                    <!-- Form to update the status of a In Progress task to Completed -->
+                    <!-- form to change the status of the task -->
                     <td>
 
                         <form class="update-status" method="POST" action="./update">
@@ -96,7 +93,7 @@
                             <input type="submit" value="&#128072">
                         </form>
 
-                        <!-- Form to update the status of a In Progress task to Completed -->
+                        <!-- form to change the status of the task -->
                         <form class="update-status" method="POST" action="./update">
                             <input type="hidden" value="{{task.description}}" name="name">
                             <input type="hidden" value="done" name="newstatus">
@@ -104,7 +101,7 @@
                         </form>
                     </td>
 
-                    <!--Delete a task-->
+                    <!--Remove a task-->
                     <td>
                         <form class="update-status" method="POST" action="./delete">
                             <input type="hidden" value="{{ task.description }}" name="description">
@@ -115,23 +112,22 @@
                 {% endfor %}
             </table>
 
-            <!--End In progress section-->
+
         </div>
 
-        <!-- Container for Completed section-->
+        <!-- Completed section-->
         <div class="kanban__wrapper kanban__wrapper--completed">
             <h2>Completed</h2>
             <table>
                 {% for task in completed %}
                 <tr>
                     <td>
-                        <!-- Enabling the tasks to be sortable: drag from one section to another -->
-                        <ul class="kanban__sortable">
+                        <ul>
                             <li class="kanban__card" width=35> {{ task.description }}</li>
                         </ul>
                     </td>
 
-                    <!-- Form to update the status of a Completed task to In Progress -->
+                    <!-- form to change the status of the task -->
                     <td>
 
                         <form class="update-status" method="POST" action="./update">
@@ -141,7 +137,7 @@
                         </form>
                     </td>
 
-                    <!--Delete a task-->
+                    <!--Remove a task-->
                     <td>
                         <form class="update-status" method="POST" action="./delete">
                             <input type="hidden" value="{{ task.description }}" name="description">
@@ -151,10 +147,7 @@
                 </tr>
                 {% endfor %}
             </table>
-            <!--End Completed section-->
         </div>
-        <!-- End Kanban Board space-->
     </div>
-    <!-- End Kanban board section-->
 </section>
 {% endblock %}
