--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,16 +1,12 @@
-{% extends "base.html" %}
-
-{% block title %}
-<title>Log In</title>
-{% endblock %}
-
-{% block header %}
-<link rel="stylesheet" type="text/css" href="static/css/styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap" rel="stylesheet">
-{% endblock %}
-
-{% block content %}
-<h1>Log In</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap" rel="stylesheet">    
+    <title>Log In</title>
+</head>
+<body>
+    <h1>Log In</h1>
 <form method="POST" action="{{ url_for('login') }}">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username"><br>
@@ -26,4 +22,3 @@
 {% endif %}
 
 <p>Do not have an account? <a href="{{ url_for('signup') }}">Sign up!</a></p>
-{% endblock %}
