--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap" rel="stylesheet">    
     <title>Log In</title>
 </head>
 <body>
     <h1>Log In</h1>
-<form method="POST" action="{{ url_for('login') }}">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username"><br>
+    <form method="POST" action="{{ url_for('login') }}">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username"><br>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br>
 
-    <input type="submit" value="Log In">
-</form>
+        <input type="submit" value="Log In">
+    </form>
 
-{% if error %}
-<p class="error">{{ error }}</p>
-{% endif %}
+    {% if error %}
+    <p class="error">{{ error }}</p>
+    {% endif %}
 
-<p>Do not have an account? <a href="{{ url_for('signup') }}">Sign up!</a></p>
+    <p>Do not have an account? <a href="{{ url_for('signup') }}">Sign up!</a></p>
+</body>
+</html>
